Added new route for UoM collection
