# project2/routes/index.js
@@ -4,6 +4,7 @@ const router = express.Router();
 
 //routes
 router.use("/recipe", require("./recipe"))
+router.use("/unit-of-measure", require("./unit-of-measure"))
 
 // Swagger setup
 const swaggerUi = require('swagger-ui-express');
